src/objects/OV_KPI_Dimension_Customer__c.object
<CustomObject>
    <description>One View KPI Dimension - Hierarchical</description>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer</label>
        <referenceTo>OV_KPI_Dimension_Customer__c</referenceTo>
        <relationshipLabel>One View KPI Dimension Customers</relationshipLabel>
        <relationshipName>OV_KPI_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Level__c</fullName>
        <label>Parent Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>One View KPI Dimension Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Level__c</columns>
        <columns>Parent_Id__c</columns>
        <columns>Parent_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>One View KPI Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View KPI Dimension Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>